[project]
name = "punch-mission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "astrometry==4.3.0",
    "astropy==7.0.1",
    "ccsdspy==1.4.1",
    "click==8.1.8",
    "coolname==2.2.0",
    "dash==4.0.0",
    "dash-bootstrap-components==2.0.4",
    "glymur==0.14.4",
    "gunicorn==23.0.0",
    "h5py==3.13.0",
    "joblib==1.4.2",
    "jupyter>=1.1.1",
    "lmfit==1.3.3",
    "lxml==6.1.0",
    "matplotlib==3.9.2",
    "ndcube==2.3.1",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numexpr==2.10.2",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "photutils==2.2.0",
    "plotly==6.0.1",
    "prefect[dask,sqlalchemy]==3.7.4",
    "punchbowl",
    "pydantic==2.11.7",
    "pylibjpeg[libjpeg,openjpeg]==2.0.1",
    "python-dateutil==2.9.0",
    "regularizepsf",
    "remove-starfield==0.1",
    "reproject==0.20.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sep==1.4.1",
    "setuptools==78.1.1",
    "simpunch",
    "solpolpy",
    "sqlalchemy==2.0.40",
    "sunpy[all]==6.1.1",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "xlrd==2.0.1",
]

[tool.uv.sources]
punchbowl = { path = "../punchbowl", editable = true }
regularizepsf = { path = "../regularizepsf", editable = true }
solpolpy = { path = "../solpolpy", editable = true }
simpunch = { path = "../simpunch", editable = true }
