[project]
name = "punch-mission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "astropy==7.0.1",
    "jupyter>=1.1.1",
    "lmfit==1.3.3",
    "matplotlib==3.9.2",
    "ndcube==2.3.1",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "photutils==2.2.0",
    "plotly==6.0.1",
    "punchbowl",
    "python-dateutil==2.9.0",
    "regularizepsf",
    "scipy==1.15.2",
    "simpunch",
    "solpolpy",
    "sunpy[all]==6.1.1",
]

[project.optional-dependencies]
super_user = [
    "astrometry",
    "click==8.1.8",
    "glymur==0.14.4",
    "h5py==3.13.0",
    "lxml==6.1.0",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numexpr==2.10.2",
    "remove-starfield==0.1",
    "reproject==0.20.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "sep==1.4.1",
    "setuptools==78.1.1",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tqdm==4.67.1",
]

[dependency-groups]
pipe = [
    "ccsdspy",
    "prefect[dask,sqlalchemy]",
    "pymysql",
    "pandas",
    "xlrd",
    "pydantic",
    "sqlalchemy",
    "dash >= 4",
    "dash-bootstrap-components",
    "dash_bootstrap_templates",
    "coolname",
    "numpy",
    "plotly",
    "pyyaml",
    "click",
    "pylibjpeg[libjpeg,openjpeg]",
    "psutil",
    "gunicorn",
    "numpy-quaternion",
    "joblib==1.4.2"
]

test = [
    "pytest",
    "pytest-order",
    "codespell",
    "coverage",
    "pytest-cov",
    "flake8",
    "pytest-runner",
    "pytest-mpl",
    "pre-commit",
    "ruff",
    "hypothesis",
]

test_pipe = [
    "pre-commit",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "pytest-cov",
    "pytest-mock-resources[mysql]",
    "freezegun",
    "ruff"
]

docs = [
    "astroid>=3",
    "sphinx",
    "sphinx-gallery",
    "sphinx_rtd_theme",
    "codespell",
    "packaging",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "sphinx-favicon",
    "jupyterlite-sphinx",
    "ipython",
    "ipykernel",
    "sphinxcontrib-mermaid",
    "sphinx-copybutton",
    "ffmpeg-python",
    "bokeh"
]

docs_pipe = [
    "packaging",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinxcontrib-mermaid",
    "sphinx-automodapi"
]


dev = [
    {include-group = "pipe"},
    {include-group = "test"},
    {include-group = "test_pipe"},
    {include-group = "docs"},
    {include-group = "docs_pipe"}
]


[tool.uv.sources]
punchbowl = { path = "../punchbowl", editable = true }
regularizepsf = { path = "../regularizepsf", editable = true }
solpolpy = { path = "../solpolpy", editable = true }
simpunch = { path = "../simpunch", editable = true }
